--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/jest": "^24.0.12",
     "@types/node": "^12.0.0",
+    "@types/node-sass": "^4.11.0",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "node-sass": "^4.12.0",
