--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -15,7 +15,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "worker-loader": "^2.0.0",
+    "wwamaker-loader": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
