--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -11,9 +11,11 @@
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.8",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "typescript": "^3.4.5",
     "worker-loader": "^2.0.0",
