--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
     "typescript": "^3.4.5",
     "worker-loader": "^2.0.0",
     "wwamaker-loader": "0.0.1"
