--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.4.5",
     "worker-loader": "^2.0.0",
     "wwamaker-loader": "0.0.1"
