--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -12,13 +12,14 @@
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.8",
+    "@types/react-split-pane": "^0.1.67",
     "@types/redux-saga": "^0.10.5",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
-    "react-split-grid": "^1.0.2",
+    "react-split-pane": "^0.1.87",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "typescript": "^3.4.5",
