--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "typescript": "^3.4.5",
+    "typescript-fsa": "^3.0.0-beta-2",
     "worker-loader": "^2.0.0",
     "wwamaker-loader": "0.0.1"
   },
