--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -24,6 +24,7 @@
     "redux-saga": "^1.0.2",
     "typescript": "^3.4.5",
     "typescript-fsa": "^3.0.0-beta-2",
+    "typescript-fsa-reducers": "^1.2.1",
     "worker-loader": "^2.0.0",
     "wwamaker-loader": "0.0.1"
   },
