--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -22,9 +22,11 @@
     "react-split-pane": "^0.1.87",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.4.5",
-    "typescript-fsa": "^3.0.0-beta-2",
+    "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1",
+    "typescript-fsa-redux-thunk": "^2.1.9",
     "worker-loader": "^2.0.0",
     "wwamaker-loader": "0.0.1"
   },
