--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -21,14 +21,13 @@
     "react-scripts": "3.0.1",
     "react-split-pane": "^0.1.87",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.2",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.4.5",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1",
     "typescript-fsa-redux-thunk": "^2.1.9",
-    "worker-loader": "^2.0.0",
-    "wwamaker-loader": "0.0.1"
+    "worker-loader": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
