semantic-ui-react を導入、InfoPanel の実装を変更

--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -23,6 +23,8 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "typescript": "^3.4.5",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1",
