saverをmakerに組み込み、WWADataArrayをutilsに移動

--- a/packages/saver/package.json
+++ b/packages/saver/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "WWA Mapdata Save API",
   "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "author": "WWA Wing Team",
   "license": "MIT",
   "private": true,
