--- a/packages/saver/tsconfig.json
+++ b/packages/saver/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./lib",
     "lib": [
       "esnext"
-    ]
+    ],
+    "declaration": true
   },
   "include": [
     "src/**/*.ts"
