--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.8",
     "@types/react-split-pane": "^0.1.67",
+    "@welldone-software/why-did-you-render": "^4.1.3",
     "@wwawing/common-interface": "^3.2.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
