image-decorderを組み込み、Containerコンポーネントを関数コンポーネント化

--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -30,7 +30,8 @@
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1",
     "typescript-fsa-redux-thunk": "^2.1.9",
-    "wwamaker-saver": "^0.0.1"
+    "wwamaker-saver": "^0.0.1",
+    "wwamaker-image-decorder": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
