--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -15,7 +15,8 @@
     "@types/react-split-pane": "^0.1.67",
     "@welldone-software/why-did-you-render": "^4.1.3",
     "@wwawing/common-interface": "^3.2.11",
-    "@wwawing/loader": "^3.4.0",
+    "@wwawing/event-emitter": "^3.4.0",
+    "@wwawing/loader": "^3.4.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
