Loader の WWAConsts で設定済みの定数をソースコードから削除

--- a/packages/saver/package.json
+++ b/packages/saver/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@wwawing/common-interface": "^3.3.0",
+    "@wwawing/loader": "^3.4.1",
     "typescript": "^3.4.5"
   },
   "scripts": {
