--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "yarn workspace wwamaker-maker start"
+    "start": "yarn workspace wwamaker-maker start",
+    "build": "yarn workspace wwamaker-image-decorder build && yarn workspace wwamaker-saver build"
   }
 }
