(WIP) WWA Saver のテストを作成

--- a/packages/saver/tsconfig.json
+++ b/packages/saver/tsconfig.json
@@ -6,12 +6,14 @@
     "lib": [
       "esnext"
     ],
-    "declaration": true
+    "declaration": true,
+    "moduleResolution": "node"
   },
   "include": [
     "src/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/**/*.test.ts"
   ]
 }
