--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "scripts": {
     "start": "yarn workspace wwamaker-maker start",
     "build": "yarn workspace wwamaker-image-decorder build && yarn workspace wwamaker-saver build"
+  },
+  "dependencies": {
+    "set-value": "2.0.1"
   }
 }
