WIP: electron-webpack を導入、start時のブラウザー立ち上げを削除

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "yarn workspace wwamaker-maker start",
+    "start": "yarn workspace wwamaker-app electron && yarn workspace wwamaker-maker start",
     "build": "yarn workspace wwamaker-image-decorder build && yarn workspace wwamaker-saver build"
   }
 }
