--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "yarn workspace wwamaker-app electron && yarn workspace wwamaker-maker start",
+    "start": "npm-run-all -p start:*",
+    "start:electron": "yarn workspace wwamaker-app electron",
+    "start:webpack": "yarn workspace wwamaker-maker start",
     "build": "yarn workspace wwamaker-image-decorder build && yarn workspace wwamaker-saver build"
+  },
+  "devDependencies": {
+    "npm-run-all": "4.1.5"
   }
 }
