--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,16 +1,19 @@
+// Based on https://github.com/electron/electron-quick-start-typescript
+
 {
-  // FIXME: 内部パッケージのビルドでオブジェクトが存在しないコンパイルエラーが100以上発生する
-  "extends": "../../tsconfig.json",
+  // FIXME: 内部パッケージのビルドで型の未定義や重複定義などのコンパイルエラーが100以上発生する
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "commonjs",
     "rootDir": "./src",
     "outDir": "./lib",
-    "isolatedModules": false
+    "baseUrl": ".",
+    "noImplicitAny": true,
+    "sourceMap": true,
+    "paths": {
+      "*": ["node_modules/*"]
+    }
   },
   "include": [
     "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
