WWA Loader をアップデート、開発用メニューを追加

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,7 +16,7 @@
     "typescript": "^3.4.5",
     "@wwawing/common-interface": "^3.5.9-module-test.1",
     "@wwawing/event-emitter": "^3.5.9-module-test.1",
-    "@wwawing/loader": "^3.5.9-module-test.1",
+    "@wwawing/loader": "^3.5.11-loader-node-impl.0",
     "wwamaker-saver": "^0.0.1"
   },
   "devDependencies": {
