--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@reduxjs/toolkit": "1.6.0",
     "@svgr/webpack": "4.3.3",
     "@types/jest": "^25.2.2",
     "@types/node": "^14.0.1",
