--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "npm-run-all -p start:*",
     "start:electron": "yarn workspace wwamaker-app electron",
     "start:webpack": "yarn workspace wwamaker-maker start",
-    "build": "yarn workspace wwamaker-image-decorder build && yarn workspace wwamaker-saver build"
+    "build": "yarn workspace wwamaker-app build && yarn workspace wwamaker-image-decorder build && yarn workspace wwamaker-saver build"
   },
   "devDependencies": {
     "npm-run-all": "4.1.5"
