--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -19,9 +19,8 @@
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "@welldone-software/why-did-you-render": "^4.1.3",
-    "@wwawing/common-interface": "^3.2.11",
-    "@wwawing/event-emitter": "^3.4.0",
-    "@wwawing/loader": "^3.4.1",
+    "@wwawing/common-interface": "^3.5.11-publishtest.1",
+    "@wwawing/event-emitter": "^3.5.11-publishtest.1",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
