--- a/packages/saver/tsconfig.json
+++ b/packages/saver/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
+    "outDir": "./lib",
+    "module": "CommonJS",
     "declaration": true
   },
   "include": [
