--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,14 +12,14 @@
     "build": "shx rm -rf lib && tsc -p ."
   },
   "dependencies": {
-    "shx": "^0.3.2",
-    "typescript": "^3.4.5",
     "@wwawing/common-interface": "^3.5.11-publishtest.1",
     "@wwawing/event-emitter": "^3.5.11-publishtest.1",
     "@wwawing/loader": "^3.5.11-publishtest.1",
     "@wwawing/page-generator": "3.5.11",
-    "wwamaker-saver": "^0.0.1",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "shx": "^0.3.2",
+    "typescript": "^4.3.5",
+    "wwamaker-saver": "^0.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
