--- a/packages/saver/package.json
+++ b/packages/saver/package.json
@@ -13,16 +13,16 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@types/jest": "^25.2.2",
+    "@types/jest": "^26.0.24",
     "@wwawing/common-interface": "^3.5.11-publishtest.1",
-    "jest": "24.9.0",
+    "jest": "27.0.6",
     "shx": "^0.3.2",
-    "ts-jest": "^26.0.0",
-    "typescript": "^3.4.5"
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@wwawing/loader": "^3.5.11-publishtest.1",
-    "@wwawing/event-emitter": "^3.5.11-publishtest.1"
+    "@wwawing/event-emitter": "^3.5.11-publishtest.1",
+    "@wwawing/loader": "^3.5.11-publishtest.1"
   },
   "scripts": {
     "build": "run-p build:*",
