--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -29,7 +29,7 @@
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^10.0.0",
     "camelcase": "^6.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "case-sensitive-paths-webpack-plugin": "2.4.0",
     "css-loader": "6.2.0",
     "dotenv": "10.0.0",
     "dotenv-expand": "5.1.0",
@@ -67,14 +67,14 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "resolve": "1.15.0",
+    "resolve": "1.20.0",
     "resolve-url-loader": "4.0.0",
     "sass-loader": "12.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "semver": "7.3.5",
     "style-loader": "3.2.1",
-    "ts-pnp": "1.1.6",
+    "ts-pnp": "1.2.0",
     "typescript": "^4.3.5",
     "url-loader": "4.1.1",
     "webpack": "5.48.0",
@@ -85,7 +85,8 @@
     "wwamaker-saver": "^0.0.1"
   },
   "devDependencies": {
-    "electron": "^13.1.2"
+    "electron": "^13.1.2",
+    "webpack-cli": "4.7.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
