Create React App の Eject を解除、 CRACO を導入

--- a/packages/maker/tsconfig.json
+++ b/packages/maker/tsconfig.json
@@ -6,7 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
-    "jsx": "react"
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
