--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -6,9 +6,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.9.0",
+    "@craco/craco": "^6.2.0",
     "@reduxjs/toolkit": "1.6.0",
-    "@svgr/webpack": "5.5.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.10",
     "@types/node-sass": "^4.11.0",
@@ -16,83 +15,34 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.0.8",
     "@types/react-split-pane": "^0.1.67",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
     "@welldone-software/why-did-you-render": "^6.2.0",
     "@wwawing/common-interface": "^3.5.11-publishtest.1",
     "@wwawing/engine": "3.5.10",
     "@wwawing/event-emitter": "^3.5.11-publishtest.1",
     "@wwawing/styles": "3.5.9",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "^27.0.6",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-preset-react-app": "^10.0.0",
-    "camelcase": "^6.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.4.0",
-    "css-loader": "6.2.0",
-    "dotenv": "10.0.0",
-    "dotenv-expand": "5.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-flowtype": "5.9.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "6.2.0",
-    "fs-extra": "^10.0.0",
-    "html-webpack-plugin": "5.3.2",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "27.0.6",
-    "jest-environment-jsdom-fourteen": "1.0.1",
-    "jest-resolve": "27.0.6",
-    "jest-watch-typeahead": "0.6.4",
-    "mini-css-extract-plugin": "2.1.0",
     "node-sass": "^6.0.1",
-    "optimize-css-assets-webpack-plugin": "6.0.1",
-    "pnp-webpack-plugin": "1.6.4",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "6.1.1",
-    "postcss-normalize": "10.0.0",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "6.0.0",
     "react": "^17.0.2",
-    "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.0.3",
+    "react-scripts": "4.0.3",
     "react-split-pane": "^0.1.87",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "resolve": "1.20.0",
-    "resolve-url-loader": "4.0.0",
-    "sass-loader": "12.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "semver": "7.3.5",
-    "style-loader": "3.2.1",
-    "ts-pnp": "1.2.0",
     "typescript": "^4.3.5",
-    "url-loader": "4.1.1",
-    "webpack": "5.48.0",
-    "webpack-dev-server": "3.11.0",
-    "webpack-manifest-plugin": "4.0.2",
-    "workbox-webpack-plugin": "6.1.5",
     "wwamaker-image-decorder": "^0.0.1",
     "wwamaker-saver": "^0.0.1"
   },
   "devDependencies": {
-    "ts-loader": "9.2.5",
-    "electron": "^13.1.2",
-    "webpack-cli": "4.7.2"
+    "electron": "^13.1.2"
   },
   "scripts": {
-    "start": "webpack-cli serve --mode development",
-    "build": "webpack --mode production",
-    "test": "jest"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -107,59 +57,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
     ]
   }
 }
