--- a/packages/maker/package.json
+++ b/packages/maker/package.json
@@ -23,7 +23,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.0.3",
-    "react-scripts": "^4.0.3",
     "react-split-pane": "^0.1.87",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
@@ -35,7 +34,8 @@
     "wwamaker-saver": "^0.0.1"
   },
   "devDependencies": {
-    "electron": "^13.1.2"
+    "electron": "^13.1.2",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "craco start",
